RESOLVED FIXED220075
Layout overflow is computed incorrectly inside flexbox (breaks sticky positioning)
https://bugs.webkit.org/show_bug.cgi?id=220075
Summary Layout overflow is computed incorrectly inside flexbox (breaks sticky positio...
Simon Fraser (smfr)
Reported 2020-12-21 15:42:07 PST
Created attachment 416639 [details] Testcase In the attached testcase, the sticky element gets pushed out of view as you scroll down and should not. In RenderBoxModelObject::computeStickyPositionConstraints(), containingBlock->layoutOverflowRect() returns a rect that is too short, but only when inside flex layout.
Attachments
Testcase (683 bytes, text/html)
2020-12-21 15:42 PST, Simon Fraser (smfr)
no flags
Patch (4.64 KB, patch)
2020-12-21 19:58 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-12-21 15:43:00 PST
Simon Fraser (smfr)
Comment 2 2020-12-21 19:58:36 PST
EWS
Comment 3 2020-12-22 08:09:28 PST
Committed r271053: <https://trac.webkit.org/changeset/271053> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416648 [details].
Note You need to log in before you can comment on or make changes to this bug.