Layout overflow is computed incorrectly inside flexbox (breaks sticky positioning) https://bugs.webkit.org/show_bug.cgi?id=220075 Source/WebCore:

<rdar://problem/70956639>

Reviewed by Zalan Bujtas.

RenderBlock::endAndCommitUpdateScrollInfoAfterLayoutTransaction(), which is only called by grid
and flexbox layout, would unconditionally clear layout overflow on boxes with overflow clipping,
which resulted in incorrect sticky positioning because RenderBoxModelObject::computeStickyPositionConstraints()
consults layout overflow.

It was only through happenstance that overflow:scroll worked correctly, relying on the fact
that updateScrollInfoAfterLayout() would trigger caching of scroll dimensions on RenderLayer.

This clearing was added in r151360 but seems incorrect; layout overflow should be preserved
after layout.

Test: fast/flexbox/preserve-layout-overflow.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::endAndCommitUpdateScrollInfoAfterLayoutTransaction):

LayoutTests:

Reviewed by Zalan Bujtas.

* fast/flexbox/preserve-layout-overflow-expected.txt: Added.
* fast/flexbox/preserve-layout-overflow.html: Added.


Canonical link: https://commits.webkit.org/232650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271053 268f45cc-cd09-0410-ab3c-d52691b4dbfc